added warm-up related parameter